--- a/lab2_4.ipynb
+++ b/lab2_4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPaOUzrLc+a9wss9sMEK6Is",
+      "authorship_tag": "ABX9TyO8TpmBijMB/6wWeb608rGQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,6 +77,24 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "task1:write a python code that sort lists by using bubble sort algorithm\n"
+      ],
+      "metadata": {
+        "id": "RoJUq1bjSUuY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "prompt:generate a python code to sort the list"
+      ],
+      "metadata": {
+        "id": "btfn9K_oUTe2"
+      }
     },
     {
       "cell_type": "markdown",
