--- a/lab2_4.ipynb
+++ b/lab2_4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO8TpmBijMB/6wWeb608rGQ",
+      "authorship_tag": "ABX9TyO7qtbov/rFwNUBd8J2JQDH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,9 +64,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tsVIJRrcPz2r",
-        "outputId": "9971c49b-8e13-4d4a-abe4-bc5027cf1b1a"
+        "outputId": "4cc9b58b-cf29-4630-bd03-dfb7dd7bbc4e"
       },
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,24 +90,80 @@
     {
       "cell_type": "markdown",
       "source": [
-        "prompt:generate a python code to sort the list"
+        "prompt:generate a python code to sort the list with the bubble sort algorithm"
       ],
       "metadata": {
         "id": "btfn9K_oUTe2"
       }
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2f3c5c45",
+        "outputId": "0c712fbc-3289-4316-c911-6a3be2e2235c"
+      },
+      "source": [
+        "def bubble_sort(list_):\n",
+        "  \"\"\"\n",
+        "  Sorts a list using the bubble sort algorithm.\n",
+        "\n",
+        "  Args:\n",
+        "    list_: The list to sort.\n",
+        "\n",
+        "  Returns:\n",
+        "    The sorted list.\n",
+        "  \"\"\"\n",
+        "  n = len(list_)\n",
+        "  for i in range(n):\n",
+        "    # Last i elements are already in place\n",
+        "    for j in range(0, n - i - 1):\n",
+        "      # Traverse the list from 0 to n-i-1\n",
+        "      # Swap if the element found is greater than the next element\n",
+        "      if list_[j] > list_[j + 1]:\n",
+        "        list_[j], list_[j + 1] = list_[j + 1], list_[j]\n",
+        "  return list_\n",
+        "\n",
+        "# Example usage:\n",
+        "my_list = [64, 34, 25, 12, 22, 11, 90]\n",
+        "sorted_list = bubble_sort(my_list)\n",
+        "print(\"Sorted list:\", sorted_list)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Sorted list: [11, 12, 22, 25, 34, 64, 90]\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "if number % 2 == 0:\n",
-        "    return \"Even\"\n",
-        "  else:\n",
-        "    return \"Odd\"\n",
+        "  n = len(list_)\n",
+        "  for i in range(n):\n",
+        "    for j in range(0, n - i - 1):\n",
+        "      if list_[j] > list_[j + 1]:\n",
+        "        list_[j], list_[j + 1] = list_[j + 1], list_[j]\n",
+        "  return list_\n",
         "\n",
-        "    "
+        "\n",
+        " 1) n = len(list_): This line gets the length of the input list and stores it in the variable n.\n",
+        "2)for i in range(n):: This is the outer loop. It iterates n times. In each iteration, the largest unsorted element \"bubbles up\" to its correct position at the end of the unsorted portion of the list.\n",
+        "3)for j in range(0, n - i - 1):: This is the inner loop. It iterates through the unsorted portion of the list. The range decreases in each outer loop iteration because the last i elements are already sorted.\n",
+        "4)if list_[j] > list_[j + 1]:: This line compares adjacent elements in the list.\n",
+        "5)list_[j], list_[j + 1] = list_[j + 1], list_[j]: If the element at index j is greater than the element at index j + 1, these two elements are swapped. This is how the larger elements \"bubble up\".\n",
+        "6)return list_: After the loops complete, the function returns the sorted list.\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
-        "id": "l8DtyUPuQrWY"
+        "id": "gbylrHWaVlAt"
       }
     }
   ]
